Hemos hecho el temario, directivas y pipes

--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/animate.css",
+              "src/assets/fontawesome/css/all.min.css" 
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/fontawesome/js/all.min.js"
+            ]
           },
           "configurations": {
             "production": {
