--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,10 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "src/assets/css/animate.css",
-              "src/assets/fontawesome/css/all.min.css" 
+              "src/assets/fontawesome/css/all.min.css"
             ],
             "scripts": [
               "src/assets/fontawesome/js/all.min.js"
@@ -92,6 +93,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -123,6 +125,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ejercicio"
 }
